@@ -4,17 +4,17 @@ import io.netty.channel.ChannelFutureListener;
 
 import java.util.concurrent.ArrayBlockingQueue;
 import java.util.concurrent.BlockingQueue;
-import java.util.concurrent.Executors;
 
 public class SubscriberQueue {
     private final Channel ch;
     private final BlockingQueue<ByteBuf> queue;
+    private final Thread thread;
 
     public SubscriberQueue(Channel ch) {
         this.ch = ch;
-        this.queue = new ArrayBlockingQueue<>(2048);
+        this.queue = new ArrayBlockingQueue<>(1024 * 500); //500K msg capacity
 
-        Executors.newVirtualThreadPerTaskExecutor().submit(() -> {
+        this.thread = new Thread(() -> {
             try {
                 while (!Thread.currentThread().isInterrupted()) {
                     ByteBuf message = queue.take();
@@ -24,6 +24,8 @@ public class SubscriberQueue {
                 Thread.currentThread().interrupt();
             }
         });
+
+        thread.start();
     }
 
     public boolean isActive() {
@@ -41,5 +43,9 @@ public class SubscriberQueue {
 
     private void handleMessage(ByteBuf message) {
         ch.writeAndFlush(message).addListener(ChannelFutureListener.CLOSE_ON_FAILURE);
+    }
+
+    public void close() {
+        thread.interrupt();
     }
 }
